[MODDICONV-374] Validate Job Profiles with Modify action